--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i><strong>Birthday:</strong><span>12 Apr 2001</span></li>
-                  <li><i class="bi bi-chevron-right"></i><strong>Website:</strong><span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i><strong>Website:</strong><span>https://section124.github.io/</span></li>
                   <li><i class="bi bi-chevron-right"></i><strong>Phone:</strong><span>+601161174426</span></li>
                   <li><i class="bi bi-chevron-right"></i><strong>City:</strong><span>Kuala Lumpur, Malaysia</span></li>
                 </ul>
