--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i><strong>Age:</strong><span>22</span></li>
-                  <li><i class="bi bi-chevron-right"></i><strong>Diploma:</strong><span>Computer Science</span></li>
-                  <li><i class="bi bi-chevron-right"></i><strong>PhEmailone:</strong>youssefsaber985@gmail.com</li>
+                  <li><i class="bi bi-chevron-right"></i><strong>Age:</strong><span>24</span></li>
+                  <li><i class="bi bi-chevron-right"></i><strong>Bachelor:</strong><span> Software Engineering (Honours)</span></li>
+                  <li><i class="bi bi-chevron-right"></i><strong>Email:</strong>youssefsaber985@gmail.com</li>
                   <li><i class="bi bi-chevron-right"></i><strong>Freelance:</strong><span>Available</span></li>
                 </ul>
               </div>
@@ -301,37 +301,6 @@
               </div>
             </div>
           </div>
-
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="form-group col-md-6">
-                  <label for="name">Your Name</label>
-                  <input type="text" name="name" class="form-control" id="name" required>
-                </div>
-                <div class="form-group col-md-6">
-                  <label for="name">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email" required>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="name">Subject</label>
-                <input type="text" class="form-control" name="subject" id="subject" required>
-              </div>
-              <div class="form-group">
-                <label for="name">Message</label>
-                <textarea class="form-control" name="message" rows="5" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center "><button type="submit">Send Message</button></div>
-            </form>
-          </div>
-        </div>
-      </div>
     </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
